// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcIcon should render properly when a name was given 1`] = `
<svg
  class="ec-icon"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the given size prop 1`] = `
<svg
  class="ec-icon"
  height="16"
  width="16"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "error" 1`] = `
<svg
  class="ec-icon ec-icon--error"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "info" 1`] = `
<svg
  class="ec-icon ec-icon--info"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "success" 1`] = `
<svg
  class="ec-icon ec-icon--success"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "warning" 1`] = `
<svg
  class="ec-icon ec-icon--warning"
>
  <use
    xlink:href="#ec-random-icon"
  />
</svg>
`;
